Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages:
       pool:
         vmImage: 'ubuntu-latest'
       variables:
-        - group: TerrformEnVariables
+        - group: IoTVariables
       steps:
         - script: |
             set -e
