--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ stages:
           # Add EF Core migration step after provisioning
           - script: |
               echo "Applying EF Core Migrations..."
-              dotnet ef database update --project $(Build.SourcesDirectory)/YourProject.csproj
+              dotnet ef database update --project $(Build.SourcesDirectory)/IoTWebApi.csproj
             displayName: 'Apply EF Core Migrations'
             env:
               DOTNET_CLI_HOME: $(Agent.TempDirectory)
