--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,10 +67,13 @@ stages:
             displayName: 'List Directory Structure'
           - script: |
               echo "Env Variable values"
-              echo $(DB_PASSWORD)
-              echo $(iot_sql_server_ip)
+              echo "Db Password::"$(DB_PASSWORD)
+              echo "sql server ip::"$(iot_sql_server_ip)
+              echo "Db Serverp::"$(DB_SERVER)
           # Add EF Core migration step after provisioning
           - script: |
+              echo "Setting environment to Production"
+              export ASPNETCORE_ENVIRONMENT=Production
               echo "Applying EF Core Migrations..."
               dotnet ef database update --project $(Build.SourcesDirectory)/IoTWebApi.csproj --verbose
             displayName: 'Apply EF Core Migrations'
