--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=${DB_SERVER};Initial Catalog=${DB_NAME};User Id=${DB_USER};Password={DB_PASSWORD};;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=${DB_SERVER};Initial Catalog=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
