--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,15 @@ stages:
               TF_VAR_DB_PASSWORD: $(DB_PASSWORD)
               TF_VAR_DB_USER: $(DB_USER)
               TF_VAR_DB_NAME: $(DB_NAME)
+
+          # Use ReplaceTokens for variable substitution in JSON files
+          - task: FileTransform@2
+            inputs:
+              folderPath: '$(System.DefaultWorkingDirectory)'
+              enableXmlTransform: false
+              jsonTargetFiles: '**/appsettings.production.json'
+            displayName: 'Substitute Variables in appsettings.production.json'
+
           - script: |
               echo "Installing dotnet-ef tool..."
               dotnet tool install --global dotnet-ef
