--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,7 @@ stages:
               echo "Setting environment to Production"
               export ASPNETCORE_ENVIRONMENT=Production
               echo "Current ASPNETCORE_ENVIRONMENT: $ASPNETCORE_ENVIRONMENT"
-              cat $(Build.SourcesDirectory)/appsettings.production.json
+              cat $(Build.SourcesDirectory)/appsettings.Production.json
               echo "Applying EF Core Migrations..."
               dotnet ef database update --project $(Build.SourcesDirectory)/IoTWebApi.csproj --environment Production --verbose
             displayName: 'Apply EF Core Migrations'
