add new stage for EF migrations

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,6 +30,7 @@ stages:
           tags: |
             $(tag)
           addBaseImageData: false
+
   - stage: Provision
     displayName: 'terraforming on Azure'
     dependsOn: Build
@@ -52,7 +53,7 @@ stages:
               echo "Extracted DB_SERVER value: $DB_SERVER"
               echo "Extracted container name value: $IOT_CONTAINER_NAME"
               echo "##vso[task.setvariable variable=DB_SERVER;]$DB_SERVER"
-              echo "##vso[task.setvariable variable=IOT_CONTAINER_NAME;]$IOT_CONTAINER_NAME"
+              echo "##vso[task.setvariable variable=IOT_CONTAINER_NAME;isOutput=true]$IOT_CONTAINER_NAME"
             name: 'RunTerraform'
             displayName: 'Run Terraform'
             env:
@@ -65,24 +66,31 @@ stages:
               TF_VAR_DB_USER: $(DB_USER)
               TF_VAR_DB_NAME: $(DB_NAME)
 
-          - script: |
-              echo "Installing dotnet-ef tool..."
-              dotnet tool install --global dotnet-ef
-              echo "Adding .NET tools to PATH..."
-              echo "::add-path::$(Agent.ToolsDirectory)/dotnet/tools"
-            displayName: 'Install dotnet-ef'
-          # EF Core Migration Step
-          - script: |
-              echo "Setting environment to Production"
-              export ASPNETCORE_ENVIRONMENT=Production
-              echo "Applying EF Core Migrations..."
-              docker exec -e ASPNETCORE_ENVIRONMENT=Production $(IOT_CONTAINER_NAME) dotnet ef database update --verbose
-            displayName: 'Apply EF Core Migrations'
-
-          - script: |
-              echo "Env Variable values"
-              echo "Db Password::" $(DB_PASSWORD)
-              echo "sql server ip::" $(iot_sql_server_ip)
-              echo "Db Serverp::" $(DB_SERVER)
-              echo "Db User::" $(DB_User)
-              echo "Db Name::" $(DB_Name)
+  - stage: Migrate
+    displayName: Apply EF Core Migrations
+    dependsOn: Provision
+    condition: succeeded()
+    variables:
+      IOT_CONTAINER_NAME: $[ dependencies.Provision.outputs['Provision.IOT_CONTAINER_NAME'] ]
+    jobs:
+    - job: Migrate
+      displayName: Apply EF Core Migrations
+      pool:
+        vmImage: ubuntu-latest
+      steps:
+        - script: |
+            echo "Installing dotnet-ef tool..."
+            dotnet tool install --global dotnet-ef
+            echo "Adding .NET tools to PATH..."
+            echo "::add-path::$(Agent.ToolsDirectory)/dotnet/tools"
+          displayName: 'Install dotnet-ef'
+          
+        - script: |
+            echo "Setting environment to Production"
+            export ASPNETCORE_ENVIRONMENT=Production
+            echo "Current ASPNETCORE_ENVIRONMENT: $ASPNETCORE_ENVIRONMENT"
+            echo "Container Name: $(IOT_CONTAINER_NAME)"
+            docker ps -a
+            echo "Applying EF Core Migrations..."
+            docker exec -e ASPNETCORE_ENVIRONMENT=Production $(IOT_CONTAINER_NAME) dotnet ef database update --verbose
+          displayName: 'Apply EF Core Migrations'
