--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,9 +50,11 @@ stages:
               terraform output -json > tf_outputs.json
               DB_SERVER=$(jq -r '.iot_sql_server_ip.value' tf_outputs.json)
               IOT_CONTAINER_NAME=$(jq -r '.iot_webapi_container.value' tf_outputs.json)
+              REMOTE_DOCKER_HOST=$(jq -r '.iot_webapi_dns_name.value' tf_outputs.json)
               echo "Extracted DB_SERVER value: $DB_SERVER"
               echo "Extracted container name value: $IOT_CONTAINER_NAME"
               echo "##vso[task.setvariable variable=DB_SERVER;]$DB_SERVER"
+              echo "##vso[task.setvariable variable=REMOTE_DOCKER_HOST;isOutput=true]$REMOTE_DOCKER_HOST"
               echo "##vso[task.setvariable variable=IOT_CONTAINER_NAME;isOutput=true]$IOT_CONTAINER_NAME"
             name: 'RunTerraform'
             displayName: 'Run Terraform'
@@ -65,21 +67,14 @@ stages:
               TF_VAR_DB_PASSWORD: $(DB_PASSWORD)
               TF_VAR_DB_USER: $(DB_USER)
               TF_VAR_DB_NAME: $(DB_NAME)
-          - script: |
-              echo "Docker Containers After Provision:"
-              docker ps -a
-            displayName: 'Check Docker Containers'
-          - script: |
-              echo "Checking Docker Daemon Status..."
-              docker info
-            displayName: 'Verify Docker Daemon'
 
   - stage: Migrate
     displayName: Apply EF Core Migrations
     dependsOn: Provision
     condition: succeeded()
     variables:
-      IOT_CONTAINER_NAME: $[ dependencies.Provision.outputs['Provision.IOT_CONTAINER_NAME'] ]
+      IOT_CONTAINER_NAME: $[dependencies.Provision.outputs['Provision.IOT_CONTAINER_NAME']]
+      REMOTE_DOCKER_HOST: $[dependencies.Provision.outputs['Provision.REMOTE_DOCKER_HOST']]
     jobs:
     - job: Migrate
       displayName: Apply EF Core Migrations
