add changes for remote docker context

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ stages:
     displayName: 'terraforming on Azure'
     dependsOn: Build
     jobs:
-      - job: Provision
+      - job: ProvisionJob
         displayName: 'Provisioning Azure resources'
         pool:
           vmImage: 'ubuntu-latest'
@@ -73,8 +73,8 @@ stages:
     dependsOn: Provision
     condition: succeeded()
     variables:
-      IOT_CONTAINER_NAME: $[dependencies.Provision.outputs['RunTerraform.IOT_CONTAINER_NAME']]
-      REMOTE_DOCKER_HOST: $[dependencies.Provision.outputs['RunTerraform.REMOTE_DOCKER_HOST']]
+      IOT_CONTAINER_NAME: $[dependencies.Provision.ProvisionJob.outputs['RunTerraform.IOT_CONTAINER_NAME']]
+      REMOTE_DOCKER_HOST: $[dependencies.Provision.ProvisionJob.outputs['RunTerraform.REMOTE_DOCKER_HOST']]
     jobs:
     - job: Migrate
       displayName: Apply EF Core Migrations
@@ -82,17 +82,24 @@ stages:
         vmImage: ubuntu-latest
       steps:
         - script: |
+            echo "Creating remote Docker context..."
+            docker context create myremotecontext --docker "host=tcp://$(REMOTE_DOCKER_HOST):8080"
+            docker context use myremotecontext
+            echo "Remote Docker Context Details:"
+            docker context ls
+          displayName: 'Configure Remote Docker Context'
+        - script: |
             echo "Installing dotnet-ef tool..."
             dotnet tool install --global dotnet-ef
             echo "Adding .NET tools to PATH..."
             echo "::add-path::$(Agent.ToolsDirectory)/dotnet/tools"
           displayName: 'Install dotnet-ef'
-          
         - script: |
             echo "Setting environment to Production"
             export ASPNETCORE_ENVIRONMENT=Production
             echo "Current ASPNETCORE_ENVIRONMENT: $ASPNETCORE_ENVIRONMENT"
             echo "Container Name: $(IOT_CONTAINER_NAME)"
+            echo "Container Name: $(REMOTE_DOCKER_HOST)"
             docker ps -a
             echo "Applying EF Core Migrations..."
             docker exec -e ASPNETCORE_ENVIRONMENT=Production $(IOT_CONTAINER_NAME) dotnet ef database update --verbose
