--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,6 +56,7 @@ stages:
               echo "##vso[task.setvariable variable=DB_SERVER;]$DB_SERVER"
               echo "##vso[task.setvariable variable=REMOTE_DOCKER_HOST;isOutput=true]$REMOTE_DOCKER_HOST"
               echo "##vso[task.setvariable variable=IOT_CONTAINER_NAME;isOutput=true]$IOT_CONTAINER_NAME"
+
             name: 'RunTerraform'
             displayName: 'Run Terraform'
             env:
@@ -67,6 +68,10 @@ stages:
               TF_VAR_DB_PASSWORD: $(DB_PASSWORD)
               TF_VAR_DB_USER: $(DB_USER)
               TF_VAR_DB_NAME: $(DB_NAME)
+          - script: |
+              echo "Container Name: $IOT_CONTAINER_NAME"
+              echo "REMOTE_DOCKER_HOST: $REMOTE_DOCKER_HOST"
+            displayName: 'Debug Outputs'
 
   - stage: Migrate
     displayName: Apply EF Core Migrations
