--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,19 +89,8 @@ stages:
             echo "::add-path::$(Agent.ToolsDirectory)/dotnet/tools"
           displayName: 'Install dotnet-ef'
         - script: |
-            echo $(deps)
-            echo "Setting environment to Production"
-            export ASPNETCORE_ENVIRONMENT=Production
-            echo "Current ASPNETCORE_ENVIRONMENT: $ASPNETCORE_ENVIRONMENT"
-            echo "Container Name: $(IOT_CONTAINER_NAME)"
-            echo "REMOTE_DOCKER_HOST: $(REMOTE_DOCKER_HOST)"
-            
-            echo "Creating remote Docker context..."
-            docker context create myremotecontext --docker "host=tcp://$(REMOTE_DOCKER_HOST):8080"
-            docker context use myremotecontext
-            echo "Remote Docker Context Details:"
-            docker context ls
-            docker ps -a
-            echo "Applying EF Core Migrations..."
-            docker exec -e ASPNETCORE_ENVIRONMENT=Production $(IOT_CONTAINER_NAME) dotnet ef database update --verbose
+            echo "Running Azure CLI to apply EF Core migrations..."
+            az login --identity
+
+            az container exec --name $(IOT_CONTAINER_NAME) --resource-group iot_sample_rg --container-name $(IOT_CONTAINER_NAME) --exec-command "/bin/bash -c 'dotnet ef database update --verbose'"
           displayName: 'Apply EF Core Migrations'
